Clean up formatting and modernize test code
Use diamond operator, static imports, toList(), and getFirst() in tests.
Minor line wrapping cleanup in production code.